--- a/backend/.env
+++ b/backend/.env
@@ -12,6 +12,9 @@ CLOUDINARY_API_SECRET=Sbp9_L-fHGNXRBujCzSDypnM48c
 # ---- Hashing ----
 SALT_ROUND=10
 
+# backend_url 
+BACKEND_URL=https://travelbuddyt-2.onrender.com
+
 
 
 
