--- a/backend/.env
+++ b/backend/.env
@@ -19,8 +19,8 @@ SALT_ROUND=10
 
 
 # JWT Config
-JWT_SECRET=super_secure_random_string_at_least_32_chars_long_!@#123
-REFRESH_TOKEN_SECRET=another_secure_random_string_32+chars_long_!@#
+JWT_SECRET=super_secure_random_string_at_least_32_chars_long_!@
+REFRESH_TOKEN_SECRET=another_secure_random_string_32+chars_long_!@
 EXPIRES_IN=1d
 REFRESH_TOKEN_EXPIRES_IN=7d
 
