neon database url added render databse url delete

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,12 @@
 PORT  = 8000
+# postgresql databse
 # DATABASE_URL="postgresql://myuser:12345@localhost:5432/travelBuddyT?schema=public"
-DATABASE_URL="postgresql://travelbuddyt_user:LFvSq941BYVJS8vGaXhy6DijrVt5LGBF@dpg-d520vg0gjchc73euvl70-a.oregon-postgres.render.com/travelbuddyt?schema=public"
+# ==render postgresql database (already suspended)
+# DATABASE_URL="postgresql://travelbuddyt_user:LFvSq941BYVJS8vGaXhy6DijrVt5LGBF@dpg-d520vg0gjchc73euvl70-a.oregon-postgres.render.com/travelbuddyt?schema=public"
+# neon databse url 
+DATABASE_URL="postgresql://neondb_owner:npg_MT5pLHin0fgS@ep-aged-sea-a1epkq5w-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+NODE_ENV=production
+
 
 
 # ---- Cloudinary ----
